# neuro-metrics

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_GUIDE.md  app.py  examples.py  pyproject.toml  test_examples.py
src/neuro_metrics/: __init__.py  colors.py  plotting.py
src/sber_neuro/stats/: tests.py
src/sber_neuro/viz/: theme.py
