[project]
name = "neuro-metrics"
version = "0.1.0"
description = "Professional neuro-metrics visualization library with Sber corporate styling"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
