[project]
name = "sber-neuro-metrics"
version = "0.1.0"
description = "A Python project for neuro metrics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "plotly",
    "pandas",
    "streamlit",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sber_neuro"]
